--- a/.github/workflows/pages.yaml
+++ b/.github/workflows/pages.yaml
@@ -1,5 +1,5 @@
-# Sample workflow for building and deploying a Hugo site to GitHub Pages
-name: Deploy Hugo site to Pages
+# Build and deploy the Procedure site to GitHub Pages
+name: Deploy site to Pages
 
 on:
   # Runs on pushes targeting the default branch
@@ -27,38 +27,35 @@ defaults:
     shell: bash
 
 jobs:
-  # Build job
   build:
     runs-on: ubuntu-latest
     env:
-      HUGO_VERSION: 0.121.1
+      REPO_NAME: ${{ github.event.repository.name }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v3
         with:
-          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
-      - name: Setup Go
-        uses: actions/setup-go@v4
+          version: 10.13.1
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          go-version: '1.21'
-      - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v2
-        with:
-          hugo-version: ${{ env.HUGO_VERSION }}
-          extended: true
-      - name: Build with Hugo
-        env:
-          # For maximum backward compatibility with Hugo modules
-          HUGO_ENVIRONMENT: production
-          HUGO_ENV: production
-        run: |
-          hugo \
-            --gc --minify \
-            --baseURL "https://${{ github.repository_owner }}.github.io/${{ github.event.repository.name }}/"
+          node-version: 20
+          cache: pnpm
+
+      - name: Install dependencies
+        run: pnpm install --frozen-lockfile
+
+      - name: Build Next.js site
+        run: pnpm run -C apps/web build
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
-          path: ./public
+          path: apps/web/out
 
   # Deployment job
   deploy:
